Fix imagen logo

--- a/src/app/Componentes/Header/Header.component.html
+++ b/src/app/Componentes/Header/Header.component.html
@@ -1,6 +1,6 @@
 <div class="header">
   <div class="logo">
-    <img ngSrc="logos/logo_pldev.svg" alt="Logo PLDEV">
+    <img src="logos/logo_pldev.svg" w alt="Logo PLDEV">
   </div>
   <div class="header-items">
     <div class="header-item"><a [routerLink]="['/']" [class.active]="isRouteActive('/')">Inicio</a></div>
