--- a/src/app/Componentes/Footer/Footer.component.html
+++ b/src/app/Componentes/Footer/Footer.component.html
@@ -1,17 +1,20 @@
 <div class="footer">
-  <div class="footer-item">
-    <small>Ir a</small>
-    <a href=""><i class="fa-brands fa-linkedin"></i></a>
-    <small class="red">LinkEdin</small>
-  </div>
-  <div class="footer-item">
-    <small>Ir a</small>
-    <a href=""><i class="fa-brands fa-github"></i></a>
-    <small class="red">GitHub</small>
-  </div>
-  <div class="footer-item">
-    <small>Ir a</small>
-    <a href=""><i class="fa-brands fa-square-twitter"></i></a>
-    <small class="red">Twitter</small>
+  <small>☕ Coding   by   PLDev ☕</small>
+  <div class="footer-items">
+    <div class="footer-item">
+      <small>Ir a</small>
+      <a href=""><i class="fa-brands fa-linkedin"></i></a>
+      <small class="red">LinkEdin</small>
+    </div>
+    <div class="footer-item">
+      <small>Ir a</small>
+      <a href=""><i class="fa-brands fa-github"></i></a>
+      <small class="red">GitHub</small>
+    </div>
+    <div class="footer-item">
+      <small>Ir a</small>
+      <a href=""><i class="fa-brands fa-square-twitter"></i></a>
+      <small class="red">Twitter</small>
+    </div>
   </div>
 </div>
