--- a/src/app/Componentes/Header/Header.component.css
+++ b/src/app/Componentes/Header/Header.component.css
@@ -1,27 +1,12 @@
 .header{
-  display: grid;
-  grid-template-columns: 1fr;
-  grid-template-rows: repeat(2, 1fr);
-  grid-column-gap: 0px;
-  grid-row-gap: 0px;
-  position: sticky;
-  top: 0px;
-  border-bottom: #5f3711 3px solid;
-}
-
-.logo {
-  grid-area: 1 / 1 / 2 / 2;
   display: flex;
+  top: 0px;
   justify-content: center;
   align-items: center;
-  padding-bottom: 30px;
-  border-bottom: 2px solid #5f3711;
+  height: 150px;
 }
-.logo > img {
-  width: 70px;
-}
+
 .header-items {
-  grid-area: 2 / 1 / 3 / 2;
   width: 100%;
   display: flex;
   justify-content: center;
@@ -36,61 +21,94 @@
   transition: 0.1s;
   font-weight: bold;
   font-size: 20px;
-  margin-left: 50px;
-  margin-right: 50px;
+  margin-left: 100px;
+  margin-right: 100px;
+}
+
+.header-item img{
+  width: 70px;
 }
 .header-item:hover a {
-  border-bottom: 2px solid #5f3711;
+  color: #5f3711;
 }
 
 .header-items a.active{
   transition: 0.5s;
   color: #5f3711;
-  border-bottom: 2px solid #5f3711;
-
 }
+
+.logoPrimer{
+  display: none;
+}
+
+.toggle-checkbox{
+  display: none;
+}
+
+
+
+
 
 
 @media (max-width: 576px) {
   .header{
-    position: relative;
+    height: auto;
   }
   .header-items{
     flex-direction: column;
-    align-items: flex-start;
   }
-  .header-item{
-    text-align: center;
-    width: 100%;
-    margin-left: 0px;
-    margin-right: 0px;
-    margin-top: 5px;
+  .logoPrimer{
+    display: block;
+  }
+  .logoSegun{
+    display: none;
+  }
+  /* Definimos la transición y el estado inicial de los elementos notLogo */
+  .header-items .notLogo {
+    max-height: 0; /* Están colapsados inicialmente */
+    overflow: hidden;
+    transition: max-height 0.5s ease-in-out;
+    opacity: 0;
+    visibility: hidden;
+  }
+
+  /* Cuando el checkbox está marcado, mostramos los elementos notLogo con animación */
+  .toggle-checkbox:checked ~ .header-items .notLogo {
+    max-height: 100px; /* Ajusta el valor dependiendo de la altura de tus elementos */
+    opacity: 1;
+    visibility: visible;
   }
 }
 
 @media (min-width: 576px) and (max-width: 768px) {
-  .header{
-    position: relative;
-  }
-  .header-items{
-    flex-direction: column;
-    align-items: flex-start;
-  }
   .header-item{
     text-align: center;
     width: 100%;
     margin-left: 0px;
     margin-right: 0px;
+    padding-top: 10px;
+  }
+
+}
+
+@media (min-width: 768px) and (max-width: 992px) {
+  .header-item{
+    text-align: center;
+    width: 100%;
+    margin-left: 20px;
+    margin-right: 20px;
     margin-top: 5px;
   }
 }
 
-@media (min-width: 768px) and (max-width: 992px) {
-  /* Estilos para tablets */
-}
-
 @media (min-width: 992px) and (max-width: 1200px) {
-  /* Estilos para portátiles y pantallas medianas */
+  .header-item{
+    text-align: center;
+    width: 100%;
+    margin-left: 30px;
+    margin-right: 30px;
+    margin-top: 5px;
+  }
 }
 
 @media (min-width: 1200px) {
