--- a/src/app/Componentes/Header/Header.component.html
+++ b/src/app/Componentes/Header/Header.component.html
@@ -1,11 +1,23 @@
 <div class="header">
-  <div class="logo">
-    <img src="logos/logo_pldev.svg" w alt="Logo PLDEV">
-  </div>
+  <input type="checkbox" id="toggleNotLogo" class="toggle-checkbox">
+
   <div class="header-items">
-    <div class="header-item"><a [routerLink]="['/']" [class.active]="isRouteActive('/')">Inicio</a></div>
-    <div class="header-item"><a [routerLink]="['/proyectos']" [class.active]="isRouteActive('/proyectos')">Proyectos</a></div>
-    <div class="header-item"><a [routerLink]="['/sobremi']" [class.active]="isRouteActive('/sobremi')">Sobre Mi</a></div>
-    <div class="header-item"><a [routerLink]="['/contacto']" [class.active]="isRouteActive('/contacto')">Contacto</a></div>
+    <div class="header-item logoPrimer">
+      <label for="toggleNotLogo">
+        <img src="logos/logo_pldev.svg" alt="Logo PLDEV">
+      </label></div>
+    <div class="header-item notLogo" ><a [routerLink]="['/inicio']" [class.active]="isRouteActive('/inicio')">Inicio</a></div>
+    <div class="header-item notLogo"><a [routerLink]="['/proyectos']" [class.active]="isRouteActive('/proyectos')">Proyectos</a>
+    </div>
+    <div class="header-item logoSegun">
+      <a [routerLink]="['/']" [class.active]="isRouteActive('/')">
+        <img src="logos/logo_pldev.svg" alt="Logo PLDEV">
+      </a></div>
+    <div class="header-item notLogo"><a [routerLink]="['/sobremi']" [class.active]="isRouteActive('/sobremi')">Sobre Mi</a>
+    </div>
+    <div class="header-item notLogo"><a [routerLink]="['/contacto']" [class.active]="isRouteActive('/contacto')">Contacto</a>
+    </div>
   </div>
 </div>
+
+
