Funcionalidad Pantalla Proyectos

--- a/src/app/Paginas/MainPage/MainPage.component.css
+++ b/src/app/Paginas/MainPage/MainPage.component.css
@@ -42,7 +42,7 @@
   margin: 40px;
   font-family: "Allura", cursive;
   padding: 5px;
-  //background-color: #ccb494;
+  background-color: #ccb494;
   font-weight: lighter;
   font-size: 20px;
   display: block;
