--- a/src/app/Paginas/ProyectosPage/ProyectosPage.component.css
+++ b/src/app/Paginas/ProyectosPage/ProyectosPage.component.css
@@ -1,3 +1,6 @@
+.parent-proyectos{
+  min-height: 100vh;
+}
 h1{
   text-align: center;
 }
@@ -8,11 +11,64 @@ h1{
   justify-content: center;
 }
 
-.proyectos>div{
+.proyecto{
+  min-height: min-content;
   width: 25%;
-  border: #5f3711 5px solid;
   margin: 15px;
   padding: 10px;
   border-radius: 10px;
-  height: 600px;
+  position: relative;
+}
+.proyecto-info{
+  opacity: 0;
+  visibility: hidden;
+  border: #5f3711 0px solid;
+  animation: aparecer 1s forwards 1.5s;
+}
+.proyecto-loader{
+  opacity: 1;
+  visibility: visible;
+  animation: desaparecer 1s forwards 1.5s;
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.inputBusqueda{
+  width: 50%;
+  margin: 0 auto;
+}
+
+.parent-proyectos{
+  display: flex;
+  flex-direction: column;
+}
+.noProjects{
+  text-align: center;
+  margin-top: 100px;
+}
+@keyframes aparecer {
+  from {
+    border: #5f3711 0px solid;
+    opacity: 0;
+    visibility: hidden;   /* Mantiene el elemento oculto */
+  }
+  to {
+    border: #5f3711 5px solid;
+    opacity: 1;
+    visibility: visible;  /* Hace que el elemento sea visible */
+  }
+}
+@keyframes desaparecer {
+  from {
+    opacity: 1;
+    visibility: visible;  /* Hace que el elemento sea visible */
+  }
+  to {
+    opacity: 0;
+    visibility: hidden;   /* Mantiene el elemento oculto */
+  }
 }
