--- a/src/app/Paginas/ProyectosPage/ProyectosPage.component.css
+++ b/src/app/Paginas/ProyectosPage/ProyectosPage.component.css
@@ -1,74 +1,171 @@
 .parent-proyectos{
   min-height: 100vh;
 }
-h1{
+/* Header */
+.header {
   text-align: center;
+  padding: 50px 20px;
+  background-color: #f6f6e2;
+  border-bottom: 1px solid #e2d5c1;
+  animation: fadeIn 1s ease-in-out;
 }
 
-.proyectos{
+.title {
+  font-size: 2.5rem;
+  margin-bottom: 10px;
+  animation: slideInLeft 1s ease-out;
+}
+
+.title-project{
   display: flex;
-  flex-wrap: wrap;
-  justify-content: center;
+  align-items: start;
+  gap: 10px;
 }
 
-.proyecto{
-  min-height: min-content;
+.title-project img{
+  width: 50px;
+  height: 50px;
+}
+.subtitle {
+  font-size: 1.5rem;
+  color: #d4c098;
+  animation: slideInRight 1s ease-out;
+}
+
+.proyectos {
+  display: flex;
+  width: 100%;
+  gap: 80px 30px;
+  justify-content: center;
+  flex-wrap: wrap;
+}
+
+.proyecto {
   width: 25%;
-  margin: 15px;
-  padding: 10px;
+  border: 1px #5f3711 solid;
   border-radius: 10px;
+  padding: 20px;
+  animation: fadeIn 1s ease-in-out;
   position: relative;
 }
-.proyecto-info{
-  opacity: 0;
-  visibility: hidden;
-  border: #5f3711 0px solid;
-  animation: aparecer 1s forwards 1.5s;
+
+.proyecto:hover {
+  transition: 0.3s ;
+  box-shadow: 1px 1px 2px #5f3711;
+  transform: scale(1.005) translate(2px, 4px);
+  background: #d4c098;
 }
-.proyecto-loader{
+
+.inputBusqueda {
+  width: 50%;
   opacity: 1;
-  visibility: visible;
-  animation: desaparecer 1s forwards 1.5s;
-  position: absolute;
-  width: 100%;
-  height: 100%;
+  transition: 1s all;
+  font-size: 20px;
+  color: #5f3711;
+  background: transparent;
+  border: none;
+  border-bottom: 1px solid #5f3711;
+  font-weight: lighter;
+  font-style: italic;
+}
+
+.inputBusqueda:focus {
+  outline: none;
+}
+
+.noProjects {
+  text-align: center;
+  margin-top: 100px;
+  animation: fadeIn 1s ease-in-out;
+}
+
+.busqueda {
   display: flex;
   justify-content: center;
   align-items: center;
-}
-
-.inputBusqueda{
-  width: 50%;
-  margin: 0 auto;
-}
-
-.parent-proyectos{
-  display: flex;
+  margin: 0px auto;
+  width: 80%;
   flex-direction: column;
+  margin-bottom: 50px;
+  animation: fadeIn 1s ease-in-out;
 }
-.noProjects{
+
+.cta-btn {
+  background-color: #5f3711;
+  color: #fff;
+  padding: 10px 20px;
+  margin: 10px;
+  border-radius: 5px;
+  font-size: 1.2rem;
+  transition: background-color 0.3s;
+  border: none;
+  width: max-content;
+}
+
+.verproyecto{
+  position: absolute;
+  bottom: -30px;
+  right: 0px;
+}
+.estado{
+  background-color: #5f3711;
+  color: #d4c098;
+  max-width: 100px;
   text-align: center;
-  margin-top: 100px;
+  padding: 5px;
+  border-radius: 5px;
+  position: absolute;
+  top: -20px;
+  right: 10px;
 }
-@keyframes aparecer {
+.cta-btn:hover {
+  background-color: #d4c098;
+}
+
+
+.oculto {
+  transition: 1s all;
+  width: 0px;
+  opacity: 0;
+}
+
+/* Animaciones */
+@keyframes fadeIn {
   from {
-    border: #5f3711 0px solid;
     opacity: 0;
-    visibility: hidden;   /* Mantiene el elemento oculto */
   }
   to {
-    border: #5f3711 5px solid;
     opacity: 1;
-    visibility: visible;  /* Hace que el elemento sea visible */
   }
 }
-@keyframes desaparecer {
+
+@keyframes slideInLeft {
   from {
-    opacity: 1;
-    visibility: visible;  /* Hace que el elemento sea visible */
+    transform: translateX(-100%);
   }
   to {
-    opacity: 0;
-    visibility: hidden;   /* Mantiene el elemento oculto */
+    transform: translateX(0);
   }
 }
+
+@keyframes slideInRight {
+  from {
+    transform: translateX(100%);
+  }
+  to {
+    transform: translateX(0);
+  }
+}
+
+@keyframes fadeInUp {
+  from {
+    opacity: 0;
+    transform: translateY(20px);
+  }
+  to {
+    opacity: 1;
+    transform: translateY(0);
+  }
+}
+
+
