--- a/src/app/Paginas/ProyectosPage/ProyectosPage.component.css
+++ b/src/app/Paginas/ProyectosPage/ProyectosPage.component.css
@@ -91,15 +91,32 @@
 }
 
 .cta-btn {
-  background-color: #5f3711;
-  color: #fff;
-  padding: 10px 20px;
-  margin: 10px;
-  border-radius: 5px;
-  font-size: 1.2rem;
-  transition: background-color 0.3s;
+  width: 250px;
+  height: min-content;
+  background: #5f3711;
+  color: white;
+  text-align: center;
+  border-radius:10px;
   border: none;
-  width: max-content;
+  transition: all 0.5s;
+  font-size: 1.2rem;
+  padding: 20px;
+  margin-top: 60px;
+}
+.cta-btn:focus{
+  outline: none;
+}
+.cta-btn.on{
+  border-radius: 0px;
+  background: transparent;
+  border-bottom: 1px solid black;
+  color: #5f3711;
+  width: 500px;
+}
+
+.cta-btn.off{
+  color: white;
+  width: 250px;
 }
 
 .verproyecto{
