--- a/src/app/Paginas/ProyectosPage/ProyectosPage.component.css
+++ b/src/app/Paginas/ProyectosPage/ProyectosPage.component.css
@@ -119,10 +119,12 @@
   width: 250px;
 }
 
-.verproyecto{
+.cta-btn.verproyecto{
   position: absolute;
-  bottom: -30px;
-  right: 0px;
+  bottom: -20px;
+  right: 10px;
+  width: 200px;
+  padding: 10px;
 }
 .estado{
   background-color: #5f3711;
