--- a/src/app/Paginas/ProyectosPage/ProyectosPage.component.scss
+++ b/src/app/Paginas/ProyectosPage/ProyectosPage.component.scss
@@ -47,6 +47,7 @@
   padding: 20px;
   animation: fadeIn 1s ease-in-out;
   position: relative;
+  padding-bottom: 80px;
 }
 
 .proyecto:hover {
@@ -124,6 +125,17 @@
   right: 10px;
   width: 200px;
   padding: 10px;
+}
+.techs{
+  display: flex;
+  gap: 10px;
+  flex-wrap: wrap;
+}
+.techs span{
+  background: #d4c098;
+  padding: 5px 10px;
+  border-radius: 5px;
+  font-size: 0.8rem;
 }
 
 .estado{
