Mejoras en el header para pantallas moviles.

--- a/src/app/Componentes/Header/Header.component.html
+++ b/src/app/Componentes/Header/Header.component.html
@@ -4,7 +4,7 @@
   <div class="header-items">
     <div class="header-item logoPrimer">
       <label for="toggleNotLogo">
-        <img src="logos/logo_pldev.svg" alt="Logo PLDEV">
+        <i class="fa fa-bars"></i>
       </label></div>
     <div class="header-item notLogo" ><a [routerLink]="['/inicio']" [class.active]="isRouteActive('/inicio')">Inicio</a></div>
     <div class="header-item notLogo"><a [routerLink]="['/proyectos']" [class.active]="isRouteActive('/proyectos')">Proyectos</a>
