--- a/src/app/Componentes/Header/Header.component.scss
+++ b/src/app/Componentes/Header/Header.component.scss
@@ -1,117 +1,111 @@
-.header{
+/* Estilos generales para .header y .header-items */
+.header,
+.header-items {
   display: flex;
-  top: 0px;
   justify-content: center;
   align-items: center;
+}
+
+.header {
+  top: 0;
   height: 150px;
 }
 
 .header-items {
   width: 100%;
-  display: flex;
-  justify-content: center;
-  align-items: center;
 }
+
+/* Enlace en .header-items */
 .header-items a {
   color: #e2d5c1;
   text-decoration: none;
+  transition: color 0.5s ease; /* Mueve la transición común aquí */
 }
-.header-item{
-  border-bottom: 0px solid transparent;
-  transition: 0.1s;
+
+/* Estilos para .header-item */
+.header-item {
+  border-bottom: 0 solid transparent;
   font-weight: bold;
   font-size: 20px;
-  margin-left: 100px;
-  margin-right: 100px;
+  margin: 0 100px; /* Simplificado */
+  transition: 1s; /* Mueve el transition aquí si es común */
 }
 
-.header-item img{
+.header-item img {
   width: 70px;
 }
+
+/* Hover en .header-item */
 .header-item:hover a {
+  transition: 0.3s all;
   color: #5f3711;
 }
 
-.header-items a.active{
-  transition: 0.5s;
+/* Activo en los enlaces */
+.header-items a.active {
   color: #5f3711;
 }
 
-.logoPrimer{
+.logoPrimer {
   display: none;
 }
 
-.toggle-checkbox{
+.toggle-checkbox {
   display: none;
 }
 
-
-
-
-
+/* --- Media Queries --- */
 
 @media (max-width: 576px) {
-  .header{
+  .header {
     height: auto;
   }
-  .header-items{
+
+  .header-items {
     flex-direction: column;
   }
-  .logoPrimer{
+
+  .header-items a {
+    font-size: 30px;
+  }
+
+  .logoPrimer {
     display: block;
   }
-  .logoSegun{
+
+  .logoSegun {
     display: none;
   }
-  /* Definimos la transición y el estado inicial de los elementos notLogo */
+
+  /* Transición para .notLogo */
   .header-items .notLogo {
-    max-height: 0; /* Están colapsados inicialmente */
+    max-height: 0;
     overflow: hidden;
-    transition: max-height 0.5s ease-in-out;
+    transition: max-height 0.5s ease-in-out, opacity 0.5s ease;
     opacity: 0;
     visibility: hidden;
   }
 
-  /* Cuando el checkbox está marcado, mostramos los elementos notLogo con animación */
+  /* Mostrar .notLogo cuando toggle-checkbox está marcado */
   .toggle-checkbox:checked ~ .header-items .notLogo {
-    max-height: 100px; /* Ajusta el valor dependiendo de la altura de tus elementos */
+    max-height: 100px;
     opacity: 1;
     visibility: visible;
   }
 }
 
-@media (min-width: 576px) and (max-width: 768px) {
-  .header-item{
+@media (min-width: 576px) and (max-width: 768px),
+(min-width: 768px) and (max-width: 992px),
+(min-width: 992px) and (max-width: 1200px) {
+  .header-item {
     text-align: center;
     width: 100%;
-    margin-left: 0px;
-    margin-right: 0px;
-    padding-top: 10px;
-  }
-
-}
-
-@media (min-width: 768px) and (max-width: 992px) {
-  .header-item{
-    text-align: center;
-    width: 100%;
-    margin-left: 20px;
-    margin-right: 20px;
-    margin-top: 5px;
+    margin: 5px 30px; /* Generaliza margen para todos los tamaños */
+    padding-top: 10px; /* Mantenemos este para pantallas más pequeñas */
   }
 }
 
-@media (min-width: 992px) and (max-width: 1200px) {
-  .header-item{
-    text-align: center;
-    width: 100%;
-    margin-left: 30px;
-    margin-right: 30px;
-    margin-top: 5px;
-  }
-}
-
+/* Pantallas grandes */
 @media (min-width: 1200px) {
-  /* Estilos para pantallas grandes y escritorio */
+  /* Estilos específicos para pantallas grandes */
 }
-
