--- a/src/app/Paginas/ProyectosPage/ProyectosPage.component.html
+++ b/src/app/Paginas/ProyectosPage/ProyectosPage.component.html
@@ -21,7 +21,11 @@
         <li *ngFor="let tech of getTechs(proyecto)">{{ tech }}</li>
       </ul>-->
       <div class="techs">
-        <span *ngFor="let tech of getTechs(proyecto)"> {{ tech }} </span>
+        <span *ngFor="let tech of proyecto.tecnologias"> {{ tech }} </span>
+      </div>
+      <h1>-----------------------</h1>
+      <div class="techs">
+        <span *ngFor="let tech of proyecto.tags"> {{ tech }} </span>
       </div>
 
       <button class="cta-btn verproyecto">Ver proyecto</button>
