Cambios pequeños y Sobre Mi

--- a/src/app/Paginas/InicioPage/InicioPage.component.html
+++ b/src/app/Paginas/InicioPage/InicioPage.component.html
@@ -11,7 +11,7 @@
 
 <!-- Call-to-Action -->
 <div class="cta">
-  <a *ngFor="let cta of datosInicio!.home.cta " [href]="cta.url" class="cta-btn">{{ cta.text }}</a>
+  <a *ngFor="let cta of datosInicio!.home.cta " (click)="goTo(cta.url)" class="cta-btn">{{ cta.text }}</a>
 </div>
 
 <!-- Habilidades Destacadas -->
@@ -31,10 +31,12 @@
   <div class="projects-list">
     <div *ngFor="let project of datosInicio!.home.projects.list" class="project-card">
       <h3>{{ project.name }}</h3>
-      <p>{{ project.description}}</p>
+      <p>{{ project.descripcion}}</p>
       <div class="tech-icons">
-        <span *ngFor="let tech of project.technologies">{{ tech }}</span>
+        <span *ngFor="let tech of project.tecnologies">{{ tech }}</span>
       </div>
     </div>
   </div>
 </div>
+
+
