--- a/src/app/Paginas/InicioPage/InicioPage.component.scss
+++ b/src/app/Paginas/InicioPage/InicioPage.component.scss
@@ -70,12 +70,14 @@ a {
   gap: 20px;
   max-width: 1000px;
   margin: 0 auto;
+  margin-top: 50px;
 }
 
 .skill-card {
   background-color: #f7f6e4;
   border: 1px solid #e2d5c1;
   padding: 20px;
+  width: 250px;
   border-radius: 10px;
   text-align: center;
   transition: box-shadow 0.3s ease, transform 0.3s ease;
@@ -109,6 +111,7 @@ a {
   flex-wrap: wrap;
   justify-content: center;
   gap: 20px;
+  margin-top: 50px;
 }
 
 .project-card {
@@ -116,7 +119,7 @@ a {
   border: 1px solid #e2d5c1;
   padding: 20px;
   margin: 10px;
-  width: 300px;
+  width: 500px;
   border-radius: 10px;
   text-align: center;
   transition: transform 0.3s ease;
@@ -165,41 +168,3 @@ a {
   background-color: #d4c098;
 }
 
-/* Animaciones */
-@keyframes fadeIn {
-  from {
-    opacity: 0;
-  }
-  to {
-    opacity: 1;
-  }
-}
-
-@keyframes slideInLeft {
-  from {
-    transform: translateX(-100%);
-  }
-  to {
-    transform: translateX(0);
-  }
-}
-
-@keyframes slideInRight {
-  from {
-    transform: translateX(100%);
-  }
-  to {
-    transform: translateX(0);
-  }
-}
-
-@keyframes fadeInUp {
-  from {
-    opacity: 0;
-    transform: translateY(20px);
-  }
-  to {
-    opacity: 1;
-    transform: translateY(0);
-  }
-}
