--- a/src/app/Paginas/ProyectosPage/ProyectosPage.component.html
+++ b/src/app/Paginas/ProyectosPage/ProyectosPage.component.html
@@ -17,13 +17,10 @@
         <h3>{{ proyecto.titulo }}</h3>
       </div>
       <p>{{ proyecto.descripcion }}</p>
-      <!--<ul>
-        <li *ngFor="let tech of getTechs(proyecto)">{{ tech }}</li>
-      </ul>-->
       <div class="techs">
         <span *ngFor="let tech of proyecto.tecnologias"> {{ tech }} </span>
       </div>
-      <h1>-----------------------</h1>
+      <div class="separador"></div>
       <div class="techs">
         <span *ngFor="let tech of proyecto.tags"> {{ tech }} </span>
       </div>
