--- a/src/app/Paginas/SobreMiPage/SobreMiPage.component.scss
+++ b/src/app/Paginas/SobreMiPage/SobreMiPage.component.scss
@@ -1,3 +1,43 @@
-div{
-  height: 1000px;
+section{
+  //border:2px solid #5f3711;
+  width: 70%;
+  margin: 0 auto;
+  margin-top: 60px;
+  padding: 50px;
+  border-radius: 10px;
+  text-align: center;
+ /* box-shadow: #5f3711 5px 5px 10px;
+  background: #5f3711;
+  color: #d4c098;*/
+  font-size: 25px;
+}
+
+.left{
+  animation: sectionFadeInLeft 2s ease-in-out;
+}
+
+.right{
+  animation: sectionFadeInRight 2s ease-in-out;
+}
+
+.sobre-mi-img{
+  width: 300px;
+  border: 1px solid #5f3711;
+}
+
+.sobre-mi-hobbies{
+  display: flex;
+  justify-content: center;
+  gap: 50px
+}
+img{
+  width: 300px;
+  border: 1px solid #5f3711;
+  box-shadow: #5f3711 5px 4px 14px 0px;
+}
+.separador{
+  width: 70%;
+  height: 1px;
+  margin: 0 auto;
+  box-shadow: #5f3711 0px 0px 10px;
 }
