--- a/src/app/Componentes/proyecto-card/proyecto-card.component.html
+++ b/src/app/Componentes/proyecto-card/proyecto-card.component.html
@@ -1,1 +1,18 @@
-<p>proyecto-card works!</p>
+<div class="proyecto">
+  <div class="title-project">
+    <img src="https://upload.wikimedia.org/wikipedia/commons/1/10/MS_Project_Logo.png" />
+    <h3>{{ proyecto.titulo }}</h3>
+  </div>
+  <p>{{ proyecto.descripcion }}</p>
+  <div class="techs">
+    <span *ngFor="let tech of proyecto.tecnologias"> {{ tech }} </span>
+  </div>
+  <div class="separador"></div>
+  <div class="techs">
+    <span *ngFor="let tech of proyecto.tags"> {{ tech }} </span>
+  </div>
+
+  <button class="cta-btn verproyecto">Ver proyecto</button>
+
+  <div class="estado">Finalizado</div>
+</div>
