--- a/src/app/Paginas/ProyectosPage/ProyectosPage.component.html
+++ b/src/app/Paginas/ProyectosPage/ProyectosPage.component.html
@@ -11,23 +11,8 @@
 
   </div>
   <div class="proyectos" *ngIf="proyectos.length != 0">
-    <div *ngFor="let proyecto of proyectos" class="proyecto">
-      <div class="title-project">
-        <img src="https://upload.wikimedia.org/wikipedia/commons/1/10/MS_Project_Logo.png" />
-        <h3>{{ proyecto.titulo }}</h3>
-      </div>
-      <p>{{ proyecto.descripcion }}</p>
-      <div class="techs">
-        <span *ngFor="let tech of proyecto.tecnologias"> {{ tech }} </span>
-      </div>
-      <div class="separador"></div>
-      <div class="techs">
-        <span *ngFor="let tech of proyecto.tags"> {{ tech }} </span>
-      </div>
-
-      <button class="cta-btn verproyecto">Ver proyecto</button>
-
-      <div class="estado">Finalizado</div>
+    <div class="proyecto" *ngFor="let proyecto of proyectos" >
+      <app-proyecto-card [proyecto]="proyecto"></app-proyecto-card>
     </div>
   </div>
   <div class="noProjects" *ngIf="proyectos.length == 0">
