--- a/src/app/Paginas/SobreMiPage/SobreMiPage.component.html
+++ b/src/app/Paginas/SobreMiPage/SobreMiPage.component.html
@@ -1,5 +1,13 @@
+
+<!-- Header -->
+<div class="header">
+  <h1 class="title">🤷🏻‍♂️ Sobre mi 🤷🏻‍♂️</h1>
+  <p class="subtitle">Conoceme un poco mejor</p>
+</div>
+
+
 <div class="sobremi">
-  <section class="left">
+  <section >
     <img src="https://via.placeholder.com/150" alt="Imagen personal" class="sobre-mi-img">
     <p>Soy un programador curioso y resolutivo con 4 años de experiencia en el desarrollo de aplicaciones web y móviles. Mi especialidad son tecnologías como Angular y Spring/Java, con enfoque en REST APIs y bases de datos. Además, disfruto de aplicar lo que aprendo en proyectos reales, buscando siempre la eficiencia y calidad.</p>
   </section>
