--- a/src/app/Paginas/SobreMiPage/SobreMiPage.component.scss
+++ b/src/app/Paginas/SobreMiPage/SobreMiPage.component.scss
@@ -37,7 +37,42 @@ img{
 }
 .separador{
   width: 70%;
-  height: 1px;
+  height: 0px;
   margin: 0 auto;
-  box-shadow: #5f3711 0px 0px 10px;
+  border: rgba(95, 55, 17, 0.26) 1px solid;
+
+}
+
+/* Header */
+.header {
+  text-align: center;
+  padding: 50px 20px;
+  background-color: #f6f6e2;
+  border-bottom: 1px solid #e2d5c1;
+  animation: fadeIn 1s ease-in-out;
+}
+.title {
+  font-size: 2.5rem;
+  margin-bottom: 10px;
+  animation: slideInLeft 1s ease-out;
+}
+
+.subtitle {
+  font-size: 1.5rem;
+  color: #d4c098;
+  animation: slideInRight 1s ease-out;
+}
+
+
+
+
+
+/* Animaciones */
+@keyframes fadeIn {
+  from {
+    opacity: 0;
+  }
+  to {
+    opacity: 1;
+  }
 }
