Cambios de texto , headet¡r y distribucion de sobre mi page

--- a/src/app/Componentes/Header/Header.component.scss
+++ b/src/app/Componentes/Header/Header.component.scss
@@ -17,7 +17,7 @@
 
 /* Enlace en .header-items */
 .header-items a {
-  color: #e2d5c1;
+  color: rgba(177, 158, 116, 0.73);
   text-decoration: none;
   transition: color 0.5s ease; /* Mueve la transición común aquí */
 }
