--- a/src/app/Componentes/proyecto-card/proyecto-card.component.html
+++ b/src/app/Componentes/proyecto-card/proyecto-card.component.html
@@ -1,7 +1,7 @@
 <div class="proyecto">
   <div class="title-project">
-    <img src="https://upload.wikimedia.org/wikipedia/commons/1/10/MS_Project_Logo.png" />
-    <h3>{{ proyecto.titulo }}</h3>
+    <!--<img src="https://upload.wikimedia.org/wikipedia/commons/1/10/MS_Project_Logo.png" />-->
+    <h2>{{ proyecto.titulo }}</h2>
   </div>
   <div class="info-proyecto">
     <p>{{ proyecto.descripcion }}</p>
