--- a/src/app/Paginas/InicioPage/InicioPage.component.html
+++ b/src/app/Paginas/InicioPage/InicioPage.component.html
@@ -1,5 +1,5 @@
 <!-- Header -->
-<div class="header">
+<div class="header-page">
   <h1 class="title">{{ datosInicio!.home.header.title }}</h1>
   <p class="subtitle">{{ datosInicio!.home.header.subtitle }}</p>
 </div>
