--- a/src/app/Paginas/ProyectosPage/ProyectosPage.component.html
+++ b/src/app/Paginas/ProyectosPage/ProyectosPage.component.html
@@ -1,7 +1,7 @@
 <div class="parent-proyectos">
   <!-- Header -->
-  <div class="header">
-    <h2 class="title">📝 Proyectos 📝</h2>
+  <div class="header-page">
+    <h1 class="title">📝 Proyectos 📝</h1>
     <p class="subtitle">Aqui podras ver mis proyectos actuales, en los que trabajo y/o trabajaré</p>
   </div>
 
