--- a/src/app/Paginas/SobreMiPage/SobreMiPage.component.scss
+++ b/src/app/Paginas/SobreMiPage/SobreMiPage.component.scss
@@ -1,15 +1,15 @@
 section{
   //border:2px solid #5f3711;
-  width: 70%;
+  width: 40%;
   margin: 0 auto;
   margin-top: 60px;
   padding: 50px;
   border-radius: 10px;
-  text-align: center;
- /* box-shadow: #5f3711 5px 5px 10px;
-  background: #5f3711;
-  color: #d4c098;*/
-  font-size: 25px;
+  text-align: justify;
+  font-size: 1.2rem;
+  line-height: 1.6;
+  display: flex;
+  flex-direction: column;
 }
 
 .left{
@@ -19,7 +19,10 @@ section{
 .right{
   animation: sectionFadeInRight 2s ease-in-out;
 }
+.sobremi{
+  animation: fadeIn 1.5s ease-in-out;
 
+}
 .sobre-mi-img{
   width: 300px;
   border: 1px solid #5f3711;
@@ -40,28 +43,9 @@ img{
   height: 0px;
   margin: 0 auto;
   border: rgba(95, 55, 17, 0.26) 1px solid;
-
 }
 
-/* Header */
-.header {
-  text-align: center;
-  padding: 50px 20px;
-  background-color: #f6f6e2;
-  border-bottom: 1px solid #e2d5c1;
-  animation: fadeIn 1s ease-in-out;
-}
-.title {
-  font-size: 2.5rem;
-  margin-bottom: 10px;
-  animation: slideInLeft 1s ease-out;
-}
 
-.subtitle {
-  font-size: 1.5rem;
-  color: #d4c098;
-  animation: slideInRight 1s ease-out;
-}
 
 
 
