--- a/src/styles.scss
+++ b/src/styles.scss
@@ -10,6 +10,29 @@ body{
 }
 
 
+/* Header  PAGINAS*/
+.header-page {
+  text-align: center;
+  padding: 50px 20px;
+  border-bottom: 1px solid #e2d5c1;
+  animation: fadeIn 1s ease-in-out;
+  margin: 10px;
+}
+
+.title {
+  margin: 0px;
+  font-size: 2.5rem;
+  margin-bottom: 10px;
+  animation: slideInLeft 1s ease-out;
+}
+
+.subtitle {
+  font-size: 1.5rem;
+  color: #917b4b;
+  animation: slideInRight 1s ease-out;
+}
+
+
 /* Animaciones */
 @keyframes fadeIn {
   from {
