Cambios en la parte de "Sobre Mi" y Bootstrapt

--- a/src/app/Paginas/SobreMiPage/SobreMiPage.component.html
+++ b/src/app/Paginas/SobreMiPage/SobreMiPage.component.html
@@ -6,44 +6,30 @@
 </div>
 
 
-<div class="sobremi">
-  <div style="display: flex">
-    <section style="text-align: center; display: flex; justify-content: center;">
-      <div>
-        <img  src="https://via.placeholder.com/150" alt="Imagen personal" class="sobre-mi-img">
-      </div>
-    </section>
-    <section>
+<div class="sobremi d-flex s row justify-content-center">
+  <div class="row d-flex justify-content-between align-items-center flex-column col-5 ">
+    <section class="col-6 d-flex align-items-center justify-content-center flex-column  text-center">
       <h2>Conoceme</h2>
       <p >Soy un programador curioso y resolutivo con 4 años de experiencia en el desarrollo de aplicaciones web y móviles. Mi especialidad son tecnologías como Angular y Spring/Java, con enfoque en REST APIs y bases de datos. Además, disfruto de aplicar lo que aprendo en proyectos reales, buscando siempre la eficiencia y calidad.</p>
     </section>
+    <section class="col-6 d-flex align-items-center justify-content-center">
+      <div>
+        <img src="imagenes/yo.jpg" class="sobre-mi-img"/>
+      </div>
+    </section>
   </div>
 
-
-  <div style="display: flex;">
-    <section >
-      <h2>Trayectoria Profesional</h2>
-      <p>Mi desarrollo como programador comenzó con proyectos desafiantes, destacando mi proyecto final del grado superior: dos aplicaciones para un restaurante de comida rápida. Una app móvil en Java/Android gestionaba pedidos a domicilio, mientras que una aplicación web en Spring permitía administrar el menú y los pedidos. Este proyecto consolidó mi pasión por crear soluciones prácticas y funcionales.</p>
-      <p>Actualmente, lidero un proyecto 100% Angular que me ha permitido crecer profesionalmente al asumir mayor independencia en el desarrollo. He trabajado en múltiples proyectos, avanzando desde roles de junior hasta senior, gracias a mi compromiso con la mejora continua.</p>
+  <div class="row d-flex justify-content-between align-items-center flex-column col-5 ">
+    <section class="col-6 d-flex align-items-center justify-content-center flex-column  text-center">
+      <h2>Hobbies</h2>
+      <p >Fuera del trabajo, disfruto de la fotografía, la edición de video y la cocina. Estas actividades también me inspiran en la programación, ya que me enseñan a buscar resultados eficientes y de calidad. Además, viajar es mi forma favorita de desconectar y recargar energías.</p>
     </section>
 
-
-    <section>
-      <h2>Mi Filosofía y Motivación</h2>
-      <p>Disfruto descubrir nuevas tecnologías y aplicarlas para optimizar soluciones. Me motiva seguir evolucionando en esta profesión, que considero tanto un trabajo como uno de mis mayores hobbies. Trabajo con el principio de que la calidad siempre debe estar por encima de la velocidad, organizando bien los tiempos para entregar resultados sólidos.</p>
+    <section class="col-6 d-flex align-items-center justify-content-center">
+      <div>
+        <img src="imagenes/photo-collage.png.png" class="sobre-mi-img"/>
+      </div>
     </section>
-
   </div>
-
-  <section>
-    <h2 style="text-align: center">Hobbies y Pasatiempos</h2>
-    <div class="sobre-mi-hobbies">
-      <img src="https://via.placeholder.com/100" alt="Hobby 1" class="sobre-mi-hobby-img">
-      <img src="https://via.placeholder.com/100" alt="Hobby 2" class="sobre-mi-hobby-img">
-      <img src="https://via.placeholder.com/100" alt="Hobby 3" class="sobre-mi-hobby-img">
-    </div>
-    <p>Fuera del trabajo, disfruto de la fotografía, la edición de video y la cocina. Estas actividades también me inspiran en la programación, ya que me enseñan a buscar resultados eficientes y de calidad. Además, viajar es mi forma favorita de desconectar y recargar energías.</p>
-  </section>
-
 
 </div>
